--- a/src/css/styles_avancado.css
+++ b/src/css/styles_avancado.css
@@ -34,12 +34,23 @@ header span h1{
     font-weight: 80px;
     line-height: normal;
 }
+header a{
+    margin: 0 100px;
+    text-decoration: none;
+    color: white;
+    font-family: var(--font-inter);
+    font-size: 30px;
+    font-style: normal;
+    line-height: normal;
+    border-bottom: 2px; 
+}
 main{
     background: url('../img/imagem_de_fundo.png'), lightgray 10%;
     background-size: cover;
 }
 .content-container{
     display: flex;
+    flex-wrap: nowrap;
     justify-content: center;
     align-items: center;
 }
@@ -55,14 +66,12 @@ main{
     font-family: var(--font-inter);
     font-size: 30px;
     font-style: normal;
-    font-weight: 60px;
+    font-weight: 60;
     line-height: normal;
 }
 .bcc-card{
     width: 1000px;
-    height: 500px;
-    min-width: 500px;
-    min-height: 300px;
+    height: 400px;
     margin: 0 0 200px;
     padding: 20px; 
     border-radius: 5px; 
@@ -72,16 +81,35 @@ main{
     transition: 0.3s all ease-in-out;
 }
 .bcc-card h2{
-    margin: 0 100px 10px;
+    margin: 0 100px;
     font-family: var(--font-inter);
-    font-size: 25px;
+    flex-shrink: 0;
+    font-family: var(--font-inter);
+    font-size: 30px;
     font-style: normal;
-    font-weight: 55px;
+    font-weight: 60;
     line-height: normal;
 }
 .bcc-card img{
-    width: 771px;
-height: 333px;
+    margin: -10px;
+    padding: 0;
+}
+.card-content{
+    display: flex;
+    justify-content: center;
+}
+.card-content img {
+    margin: 0 0;
+    width: 600px;
+    height: 288px;
+    flex-shrink: 0;
+}
+.card-content li{
+    padding: 10px;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
 }
 footer{
     background: var(--cor-primaria);
@@ -99,4 +127,7 @@ footer{
     background: var(--box-hover);
 	box-shadow: 0px 4px 15px 10px rgba(0, 0, 0, 0.25);
     transform: scale(1.05);
+}
+a:hover {
+    color: var(--azul-centaurea);
 }
