--- a/src/css/teste.css
+++ b/src/css/teste.css
@@ -1,28 +1,84 @@
-/* Estilos gerais */
-* {
-    background-color: #113272f2;
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    color: #fff;
+.calculator-card{
+    padding: -2%;
+    margin: 5%;
+    background-color: rgb(26, 20, 20, 0.4);
+}
+.calculator-text{
+    padding: 5%;
+    font-size: 20px;
 }
 
-/* Media query para telas menores */
-@media screen and (max-width: 768px) {
-    header {
-        padding: 10px;
-    }
-    nav ul li {
-        display: block;
-        margin: 10px;
-    }
-
-    main {
-        padding: 10px;
-    }
-
-    footer {
-        padding: 5px;
-    }
+.calculator-box{
+    display: flex;
+    justify-content: space-between;
 }
 
+.calculator-box form {
+    display: flex;
+    justify-content: flex-start;
+    align-self: flex-start;
+    background-color: #113272;
+    width: 70%;
+    border-radius: 2%;
+    margin: 15px;
+    border: 2px solid white;
+}
+
+.row{
+    display: flex;
+    align-items: center;
+}
+
+.calculator-box fieldset {
+    border: none;
+}
+
+.calculator-box legend{
+    font-size: 20px;
+    text-decoration: underline;
+    text-decoration-thickness: 1px;
+}
+
+.calculator-box label {
+    background-color: #526fa8;
+    border-radius: 3%;
+    display: inline-block;
+    text-align: center;
+    font-size: 15px;
+    margin: 8px 20px;
+    width: 40%;
+}
+
+.calculator-box input {
+    margin: 10px;
+    bottom: 1vw;
+    position: relative;
+    border-radius: 3%;
+    background-color: white;
+    display: inline-block;
+    padding: 4px;
+    border: none;
+    color: black;
+}
+
+.calculator-box button{
+    font-size: 20px;
+    position: relative;
+    border: none;
+    padding: 7px;
+    margin: 2%;
+    border-radius: 11%;
+    background-color: #526fa8;
+    cursor: pointer;
+    transition: 0.3s all ease-in-out;
+}
+
+.calculator-result{
+    font-size: 20px;
+    display: flex;
+    align-items: flex-start;
+}
+
+#calc-result{
+    margin: 0 10px;
+}
