--- a/src/css/teste.css
+++ b/src/css/teste.css
@@ -20,52 +20,16 @@ hr {
   }
 
 /* ESTILOS HEADER*/
-.bcc-header-conteiner {
+.bcc-header-container header{
+    display: flex;
     background-color: #113272;
-    position: relative;
-    height: 10vw;
 }
-
-.header-title{
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-    font-size: 1.8vw;
-    margin: 0 10px;
+.header-logo{
+    width: 20%;
 }
-
-.header-title h1{
-    margin-left: 3%;
-}
-
-
-.header-nav{
-    position: relative;
-    display: flex;
-    justify-content: flex-start;
-}
-.nav-items{
-    position: relative;
-    background-color:rgba(50, 80, 138, 0.3);
-    list-style: none;
-    /*Posicionando abaixo do título do header*/
-    display: flex; 
-    width: 46.6vw;
-    left: 25%;
-    bottom: 74%;
-    height: 4vw;
-}
-.nav-items li{
-    padding: 10px;
-    font-size: 1.5vw;
-}
-
-.bcc-header-conteiner hr{
-    position: relative;
-    /*Posicionando abaixo do título*/
-    bottom: 70%;
-    left: 11.7%;
-    width: 46.6%;
+.header-logo img{
+    width: 100%;
+    height: 100%;
 }
 
 /*ESTILOS MAIN*/
