--- a/src/css/homepage_completo.css
+++ b/src/css/homepage_completo.css
@@ -19,25 +19,16 @@ hr {
 
 /* ESTILOS HEADER*/
 .bcc-header-container{
-    position: relative;
-    height: 7vw;
+    width: 100%;
 }
 .bcc-header-container header{
     display: flex;
-    position: relative;
     background-color: #183672;
 }
 .header-logo{
-    display: flex;
-    justify-content: center;
-    width: 8%;
     border-radius: 0 0 50% 0;
-    box-shadow: 0 0 15px 1px #7097e0;
+    box-shadow: 0 0 12px 1px #7097e0;
     background: linear-gradient(45deg, #163e8f, #0b1d41);
-}
-.header-logo img{
-    width: 80%;
-    height: 100%;
 }
 
 .header-nav{
@@ -45,11 +36,12 @@ hr {
     display: block;
     justify-content: flex-start;
     margin: 0 30px;
-    top: 0.7vw;
+    height: 100%;
 }
 .header-nav h1{
     position: relative;
-    font-size: 2vw;
+    font-size: 30px;
+    top: 15px;
 }
 
 .nav-items{
@@ -58,22 +50,16 @@ hr {
     position: relative;
     background-color:rgba(50, 80, 138, 0.2);
     list-style: none;
-    /*Posicionando abaixo do título do header*/
-    width: 57.4vw;
-    bottom: 0.7vw;
-    height: 4vw;
+    top: 15px;
 }
 
 .nav-items li{
     display: flex;
     align-items: center;
     padding: 10px;
-    font-size: 1.2vw;
+    font-size: 16px;
 }
 
-.bcc-header-container hr{
-    display: none;
-}
 
 /*ESTILOS MAIN*/
 .bcc-main-content{
@@ -87,7 +73,6 @@ hr {
     position: relative;
     margin: 2% 0%;
 }
-
 .sec-main-content h2{
     display: flex;
     align-self: flex-start;
@@ -98,14 +83,12 @@ hr {
     font-size: 24px;
     margin-left: 6.5%;
 }
-
 .content-card{
     display: flex;
     justify-content: start;
     padding: -2%;
     margin: 5%;
 }
-
 .content-text{
     padding: 2%;
     font-size: 15px;
@@ -113,7 +96,6 @@ hr {
     border: 1px solid white;
     height: 60%;
 }
-
 .content-images{
     position: relative;
 }
@@ -125,101 +107,7 @@ hr {
 .content-images figcaption{
     margin-left: 20px;
 }
-
-/* ESTILOS CALCULADORA*/
-.calculator-card{
-    display: flex;
-    justify-content: start;
-    padding: -2%;
-    margin: 5%;
-    height: 60%;
-}
-.calculator-text{
-    background-color: rgb(26, 20, 20, 0.4);
-    border: 1px solid white;
-    margin-bottom: 30px;
-    padding: 2%;
-    font-size: 15px;
-    height: 70%;
-    width: 90%;
-}
-.calculator-box{
-    margin: 0 30px;
-}
-.calculator-box form {
-    display: flex;
-    justify-content: space-between;
-    background-color: #113272;
-    border-radius: 2%;
-    border: 1px solid white;
-}
-.form-row{
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
-}
-.calculator-box fieldset {
-    border: none;
-}
-.calculator-box legend{
-    font-size: 20px;
-    background-color: #0d2350;
-    border-radius: 5%;
-}
-.calculator-box form label {
-    height: 60%;
-    background-color: #526fa8;
-    border-radius: 3%;
-    display: inline-block;
-    text-align: center;
-    font-size: 14px;
-    margin: 13px 8px ;
-    width: 30%;
-}
-.calculator-box form input {
-    height: 60%;
-    font-size: 14px;
-    margin: 13px 0 13px;
-    border-radius: 2%;
-    width: 25%;
-    background-color: white;
-    display: inline-block;
-    padding: 6px;
-    border: none;
-    color: black;
-}
-.calculator-result{
-    font-size: 20px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    margin: 2%;
-    padding: 1%;
-    border-radius: 3%;
-    background-color: #0d2350;
-    border: none;
-}
-.form-row button{
-    margin: 2%;
-    padding: 1%;
-    border-radius: 8%;
-    font-size: 20px;
-    background-color: #0d2350;
-    border: none;
-    cursor: pointer;
-    transition: 0.3s all ease-in-out;
-}
-#calc-result{
-    padding: 5px;
-}
-
-.incorrect{
-    background-color: rgb(172, 56, 56);;
-}
-.correct{
-    background-color: rgb(46, 116, 69);
-}
-
+/* Estilos Footer*/
 .bcc-footer-conteiner footer{
     display: flex;
     justify-content: space-between;
@@ -231,9 +119,7 @@ hr {
     border: none;
     margin: 20px;
 }
-/* Estilos dinâmicos */
-
-
+/* Pseudoseletores */
 .nav-items li:hover{
     animation-duration: 0.2s;
     transition: 0.3s all ease-in-out;
@@ -250,30 +136,16 @@ hr {
 .calculator-box button:active{
     background-color: #0070e7;
 }
-/* Media query para telas menores */
-@media screen and (max-width: 956px) {
-    .bcc-header-container header{
-        height: 12vw;
-    }
-    .header-nav h1{
-        font-size: 4vw;
-    }
-    .header-nav li{
-        font-size: 3vw;
-    }
-    .nav-items{
-        width: 66vw;
-        height: 5vw;
-    }
-    .bcc-header-container hr{
-        width: 66%;
-        margin: 0 30px;
-    }
-    .header-logo{
-        width: 15%;
-    }
+/* Media Querys para telas de laptop */
+@media screen and (max-width: 1024px) {
     .content-card, .calculator-card{
-        display: block;
+        display: flex;
+        flex-direction: column;
+    }
+    .content-images{
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
     .calculator-box{
         display: flex;
@@ -284,8 +156,38 @@ hr {
         width: auto;
     }
 }
-
-@media screen and (max-width:506px){
+@media screen and (max-width: 929px){
+    .header-nav h1{
+        font-size: 24px;
+    }
+    .nav-items{
+        top: 25px;
+    }
+}
+/* Media Querys para telas de Tablets */
+@media screen and (max-width: 779px){
+    .header-logo img{
+        width: 75px;
+        height: 75px;
+    }
+    .header-nav h1{
+        font-size: 20px;
+    }
+    .nav-items{
+        top: 10px;
+    }
+    .nav-items li{
+        font-size: 14px;
+    }
+}
+/* Media Querys para telas de smartphone */
+@media screen and (max-width:649px){
+    .nav-items{
+        display: none;
+    }
+    .header-nav h1{
+        font-size: 20px;
+    }
     .content-card{
         display: block;
         padding: -2%;
