--- a/src/css/homepage_simples.css
+++ b/src/css/homepage_simples.css
@@ -37,7 +37,6 @@ h2{
     background-color:rgba(50, 80, 138, 0.3);
     list-style: none;
 }
-
 .nav-items li{
     display: flex;
     align-items: center;
@@ -71,17 +70,14 @@ h2{
 .calculator-card{
     display: flex;
     justify-content: start;
-    padding: -2%;
-    margin: 5%;
+    margin: 3%;
     height: 60%;
 }
 .calculator-text{
     background-color: rgb(26, 20, 20, 0.4);
     border: 1px solid white;
-    margin-bottom: 30px;
-    padding: 2%;
+    padding: 1%;
     font-size: 15px;
-    height: 70%;
     width: 50%;
 }
 .calculator-box{
@@ -89,71 +85,38 @@ h2{
     margin: 0 30px;
 }
 .calculator-box form {
-    display: flex;
     background-color: #113272;
-    border-radius: 2%;
     border: 1px solid white;
-    padding: 10px;
 }
 .form-row{
     display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
+    align-self: center;
+}
+.calculator-box label, input{
+    margin: 10px;
+    height: 40px;
+}
+.calculator-box input{
+    color: black;
 }
 .calculator-box fieldset {
     border: none;
 }
-.calculator-box legend{
-    font-size: 20px;
-    background-color: #0d2350;
-    border-radius: 5%;
-}
-.calculator-box form label {
-    height: 60%;
-    background-color: #526fa8;
-    border-radius: 3%;
-    display: inline-block;
-    text-align: center;
-    font-size: 14px;
-    margin: 13px 8px ;
-    width: 30%;
-}
-.calculator-box form input {
-    height: 60%;
-    font-size: 14px;
-    margin: 13px 0 13px;
-    border-radius: 2%;
-    width: 25%;
-    background-color: white;
-    display: inline-block;
-    padding: 6px;
-    border: none;
-    color: black;
-}
 .calculator-result{
     font-size: 20px;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
     margin: 2%;
     padding: 1%;
-    border-radius: 3%;
     background-color: #0d2350;
-    border: none;
 }
 .form-row button{
     margin: 2%;
     padding: 1%;
-    border-radius: 8%;
     font-size: 20px;
     background-color: #0d2350;
-    border: none;
     cursor: pointer;
     transition: 0.3s all ease-in-out;
 }
-#calc-result{
-    padding: 5px;
-}
+
 /* ESTILOS FOOTER*/
 .bcc-footer-conteiner footer{
     display: flex;
@@ -168,9 +131,4 @@ h2{
 }
 .calculator-box button:hover{
     background-color: #526fa8;
-    animation-duration: 0.2s;
-    transform: scale(1.10);
-}
-.calculator-box button:active{
-    background-color: #0070e7;
 }
