feat: adicionando exercício dia 3

--- a/petcc-homepage/css/homepage_completo.css
+++ b/petcc-homepage/css/homepage_completo.css
@@ -64,7 +64,7 @@ hr {
 /*ESTILOS MAIN*/
 .bcc-main-content{
     padding: 20px;
-    background: url("../assets/img/imagem_de_fundo.png");
+    background: url("../img/imagem_de_fundo.png");
 }
 .sec-main-content{
     display: flex;
