--- a/exercicio-1-2/css/homepage_completo.css
+++ b/exercicio-1-2/css/homepage_completo.css
@@ -41,7 +41,7 @@ hr {
 .header-nav h1{
     position: relative;
     font-size: 30px;
-    top: 15px;
+    top: 3px;
 }
 
 .nav-items{
@@ -50,7 +50,7 @@ hr {
     position: relative;
     background-color:rgba(50, 80, 138, 0.2);
     list-style: none;
-    top: 15px;
+    top: 1px;
 }
 
 .nav-items li{
@@ -60,25 +60,23 @@ hr {
     font-size: 16px;
 }
 
-
 /*ESTILOS MAIN*/
 .bcc-main-content{
     padding: 20px;
-    background: url("../img/imagem_de_fundo.png");
+    background: url("../assets/img/imagem_de_fundo.png");
 }
 .sec-main-content{
     display: flex;
     flex-direction: column;
     align-items: center;
-    position: relative;
     margin: 2% 0%;
 }
 .sec-main-content h2{
     display: flex;
     align-self: flex-start;
-    text-decoration: underline;
+    text-align: center;
     text-decoration-thickness: 1px;
-    top: 5.4vw; 
+    top: 1.4vw; 
     position: relative;
     font-size: 24px;
     margin-left: 6.5%;
@@ -87,14 +85,14 @@ hr {
     display: flex;
     justify-content: start;
     padding: -2%;
-    margin: 5%;
+    margin: 1%;
 }
 .content-text{
-    padding: 2%;
-    font-size: 15px;
     background-color: rgb(26, 20, 20, 0.4);
     border: 1px solid white;
-    height: 60%;
+    padding: 20px;
+    font-size: 24x;
+    margin-bottom: 20px;
 }
 .content-images{
     position: relative;
@@ -102,10 +100,11 @@ hr {
 .content-images img{
     border: 1px solid white;
     margin: 0px 20px 20px;
-    box-shadow: 5px 5px 20px 5px #0b1d41;
+    box-shadow: 2px 2px 15px 2px #0b1d41;
 }
 .content-images figcaption{
-    margin-left: 20px;
+    font-size: 14px;
+    text-align: center;
 }
 /* Estilos Footer*/
 .bcc-footer-conteiner footer{
@@ -120,12 +119,12 @@ hr {
     margin: 20px;
 }
 /* Pseudoseletores */
-.nav-items li:hover{
+.nav-items li:hover, .nav-route:hover{
     animation-duration: 0.2s;
     transition: 0.3s all ease-in-out;
     transform: scale(1.10);
 }
-.nav-items li a:hover{
+.nav-items li a:hover, .nav-route:hover{
     color: #8aa9e7;
 }
 .calculator-box button:hover{
@@ -158,35 +157,44 @@ hr {
 }
 @media screen and (max-width: 929px){
     .header-nav h1{
-        font-size: 24px;
+        font-size: 27px;
     }
     .nav-items{
-        top: 25px;
+        top: 1px;
     }
 }
 /* Media Querys para telas de Tablets */
-@media screen and (max-width: 779px){
+@media screen and (max-width: 821px){
     .header-logo img{
         width: 75px;
         height: 75px;
     }
     .header-nav h1{
-        font-size: 20px;
+        font-size: 21px;
     }
     .nav-items{
-        top: 10px;
+        top: 6px;
     }
     .nav-items li{
         font-size: 14px;
     }
+    .sec-main-content h2{
+        align-self: center;
+        margin-left: 0;
+    }
 }
 /* Media Querys para telas de smartphone */
-@media screen and (max-width:649px){
+@media screen and (max-width:665px){
+    .header-logo img{
+        width: 85px;
+        height: 80px;
+    }
     .nav-items{
         display: none;
     }
     .header-nav h1{
-        font-size: 18px;
+        font-size: 21px;
+        align-self: center;    
     }
     .content-card{
         display: block;
@@ -203,5 +211,10 @@ hr {
     .calculator-box{
         width: 101%;
         margin: 0;
+    }
+    .sec-main-content h2{
+        align-self: center;
+        margin-left: 0;
+        font-size: 22px;
     }
 }
